--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Carved Rock Fitness</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
+
 <body>
 
   <!-- NAVIGATION -->
   <nav>
-    <div class="container">
+    <div class="flex container space-between">
       <!-- BRANDING -->
-      <div>
+      <div class="flex align-center">
         <a href="#">
           <img alt="Carved Rock Fitness" src="img/carved-rock-logo.png">
         </a>
       </div>
       <!-- SEARCH -->
-      <div>
+      <div class="flex flex-one align-center">
         <div>
           <form>
             <input aria-label="Search" placeholder="What can we help you find?" type="search">
             <button type="submit">SEARCH</button>
           </form>
-          <ul>
+          <ul class="flex space-between">
             <li><a href="#">Clothing</a></li>
             <li><a href="#">Footwear</a></li>
             <li><a href="#">Equipment</a></li>
@@ -34,18 +36,18 @@
         </div>
         <!-- PROFILE -->
         <div>
-          <div>
+          <div class="flex flex-column align-center">
             John Doe <a href="#">Log Out</a>
           </div>
-          <div><img alt="John Doe" src="img/profile-pic.jpg"></div>
+          <div class="flex"><img alt="John Doe" src="img/profile-pic.jpg"></div>
         </div>
       </div>
     </div>
   </nav>
 
-    <!-- HERO -->
+  <!-- HERO -->
   <section>
-    <div class="container">
+    <div class="container flex flex-column align-center center">
       <h1>Get A Grip</h1>
       <h2>20% Off</h2>
       <p>Throughout The Season</p>
@@ -57,7 +59,7 @@
 
     <!-- SALE BANNER -->
     <section>
-      <div>
+      <div class="flex align-center center">
         <img alt="Brown Boots" src="img/brown-boots.jpg">
         <div>
           <div>Couples retreat weekend</div>
@@ -111,7 +113,7 @@
     <!-- FULL BANNER -->
     <section>
       <div></div>
-      <div>
+      <div class="flex flex-column align-center center">
         <h4>Trail Review</h4>
         <div>Asphalt</div>
         <div>National Park</div>
@@ -123,7 +125,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <section class="container">
+    <section class="container space-between">
       <div>
         <div>Customer Support</div>
         <ul>
@@ -174,13 +176,15 @@
 
     <!-- PS DEMO -->
     <section>
-      <div>
+      <div class="flex flex-column align-center">
         <img src="img/pluralsight-white.png" />
-        <div>This site is created for demonstrative purposes only and does not offer any real products or services.</div>
+        <div>This site is created for demonstrative purposes only and does not offer any real products or services.
+        </div>
       </div>
     </section>
 
     <div>&copy;Pluralsight 2018</div>
   </footer>
 </body>
+
 </html>
