--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input class="search-box" aria-label="Search" placeholder="What can we help you find?" type="search">
             <button class="search-botton" type="submit">SEARCH</button>
           </form>
-          <ul class="flex space-between">
+          <ul class="flex space-between nav-list">
             <li><a href="#">Clothings</a></li>
             <li><a href="#">Footwear</a></li>
             <li><a href="#">Equipment</a></li>
