--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div>
           <form>
             <input class="search-box" aria-label="Search" placeholder="What can we help you find?" type="search">
-            <button class="search-botton" type="submit">SEARCH</button>
+            <button class="search-button" type="submit">SEARCH</button>
           </form>
           <ul class="flex space-between nav-list">
             <li><a href="#">Clothings</a></li>
@@ -35,11 +35,11 @@
           </ul>
         </div>
         <!-- PROFILE -->
-        <div class="flex align-center">
-          <div class="flex flex-column align-center">
+        <div class="flex align-center profile">
+          <div class="flex flex-column align-center account">
             John Doe <a href="#">Log Out</a>
           </div>
-          <div class="flex"><img alt="John Doe" src="img/profile-pic.jpg"></div>
+          <div class="flex profile-pic"><img alt="John Doe" src="img/profile-pic.jpg"></div>
         </div>
       </div>
     </div>
