--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="search-button" type="submit">SEARCH</button>
           </form>
           <ul class="flex space-between nav-list">
-            <li><a href="#">Clothings</a></li>
+            <li><a href="#">Clothing</a></li>
             <li><a href="#">Footwear</a></li>
             <li><a href="#">Equipment</a></li>
             <li><a href="#">Bags &amp; Travel</a></li>
@@ -36,7 +36,7 @@
         </div>
         <!-- PROFILE -->
         <div class="flex align-center profile">
-          <div class="flex flex-column align-center account">
+          <div class="flex flex-column account">
             John Doe <a href="#">Log Out</a>
           </div>
           <div class="flex profile-pic"><img alt="John Doe" src="img/profile-pic.jpg"></div>
@@ -59,9 +59,9 @@
 
     <!-- SALE BANNER -->
     <section>
-      <div class="flex align-center center">
+      <div class="flex align-center center banner">
         <img alt="Brown Boots" src="img/brown-boots.jpg">
-        <div>
+        <div class="banner-text">
           <div class="text-light">Couples retreat weekend</div>
           <div class="text-secondary">Save an extra 20%</div>
           <div class="text-primary">when you buy 2 pairs of boots</div>
@@ -72,37 +72,37 @@
 
     <!-- CATEGORIES -->
     <section>
-      <div>
+      <div class="category">
         <a href="#">
           <img alt="Splash Chic" src="img/category-1.jpg" />
-          <div>
+          <div class="category-text">
             <h3>Splash Chic</h3>
             <div>Women's Wet Gear</div>
           </div>
         </a>
       </div>
-      <div>
+      <div class="category">
         <a href="#">
           <img alt="Kid Klimbers" src="img/category-2.jpg" />
-          <div>
+          <div class="category-text">
             <h3>Kid Klimbers</h3>
             <div>Children's Gear</div>
           </div>
         </a>
       </div>
-      <div>
+      <div class="category">
         <a href="#">
           <img alt="Pack It In" src="img/category-3.jpg" />
-          <div>
+          <div class="category-text">
             <h3>Pack It In</h3>
             <div>Camping Gear</div>
           </div>
         </a>
       </div>
-      <div>
+      <div class="category">
         <a href="#">
           <img alt="Nature's AC" src="img/category-4.jpg" />
-          <div>
+          <div class="category-text">
             <h3>Nature's AC</h3>
             <div>Men's Shorts</div>
           </div>
