Replace '#' with '#!' as placeholders for anchor tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="flex container space-between">
       <!-- BRANDING -->
       <div class="flex align-center brand">
-        <a href="#">
+        <a href="#!">
           <img class="logo" alt="Carved Rock Fitness" src="img/carved-rock-logo.png">
         </a>
       </div>
@@ -27,17 +27,17 @@
             <button class="search-button" type="submit">SEARCH</button>
           </form>
           <ul class="flex space-between nav-list">
-            <li><a href="#">Clothing</a></li>
-            <li><a href="#">Footwear</a></li>
-            <li><a href="#">Equipment</a></li>
-            <li><a href="#">Bags &amp; Travel</a></li>
-            <li><a href="#">Trail Reviews</a></li>
+            <li><a href="#!">Clothing</a></li>
+            <li><a href="#!">Footwear</a></li>
+            <li><a href="#!">Equipment</a></li>
+            <li><a href="#!">Bags &amp; Travel</a></li>
+            <li><a href="#!">Trail Reviews</a></li>
           </ul>
         </div>
         <!-- PROFILE -->
         <div class="flex align-center profile">
           <div class="flex flex-column account">
-            John Doe <a href="#">Log Out</a>
+            John Doe <a href="#!">Log Out</a>
           </div>
           <div class="flex profile-pic"><img alt="John Doe" src="img/profile-pic.jpg"></div>
         </div>
@@ -73,7 +73,7 @@
     <!-- CATEGORIES -->
     <section>
       <div class="category">
-        <a href="#">
+        <a href="#!">
           <img alt="Splash Chic" src="img/category-1.jpg" />
           <div class="category-text">
             <h3>Splash Chic</h3>
@@ -82,7 +82,7 @@
         </a>
       </div>
       <div class="category">
-        <a href="#">
+        <a href="#!">
           <img alt="Kid Klimbers" src="img/category-2.jpg" />
           <div class="category-text">
             <h3>Kid Klimbers</h3>
@@ -91,7 +91,7 @@
         </a>
       </div>
       <div class="category">
-        <a href="#">
+        <a href="#!">
           <img alt="Pack It In" src="img/category-3.jpg" />
           <div class="category-text">
             <h3>Pack It In</h3>
@@ -100,7 +100,7 @@
         </a>
       </div>
       <div class="category">
-        <a href="#">
+        <a href="#!">
           <img alt="Nature's AC" src="img/category-4.jpg" />
           <div class="category-text">
             <h3>Nature's AC</h3>
@@ -117,7 +117,7 @@
         <h4>Trail Review</h4>
         <div>Asphalt</div>
         <div>National Park</div>
-        <a class="btn btn-default" href="#">See Review</a>
+        <a class="btn btn-default" href="#!">See Review</a>
       </div>
     </section>
 
@@ -129,41 +129,41 @@
       <div>
         <div class="text-primary">Customer Support</div>
         <ul>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Order Tracker</a></li>
-          <li><a href="#">Returns &amp; Refunds</a></li>
-          <li><a href="#">Size Guide</a></li>
-          <li><a href="#">Store Locator</a></li>
-          <li><a href="#">Site Map</a></li>
+          <li><a href="#!">Contact Us</a></li>
+          <li><a href="#!">Order Tracker</a></li>
+          <li><a href="#!">Returns &amp; Refunds</a></li>
+          <li><a href="#!">Size Guide</a></li>
+          <li><a href="#!">Store Locator</a></li>
+          <li><a href="#!">Site Map</a></li>
         </ul>
       </div>
       <div>
         <div class="text-primary">Company Info</div>
         <ul>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Press</a></li>
-          <li><a href="#">Sustainability</a></li>
-          <li><a href="#">Affiliates</a></li>
-          <li><a href="#">Students</a></li>
-          <li><a href="#">Mobile Apps</a></li>
+          <li><a href="#!">About Us</a></li>
+          <li><a href="#!">Careers</a></li>
+          <li><a href="#!">Press</a></li>
+          <li><a href="#!">Sustainability</a></li>
+          <li><a href="#!">Affiliates</a></li>
+          <li><a href="#!">Students</a></li>
+          <li><a href="#!">Mobile Apps</a></li>
         </ul>
       </div>
       <div>
         <div class="text-primary">Privacy &amp; Terms</div>
         <ul>
-          <li><a href="#">Privacy &amp; Security</a></li>
-          <li><a href="#">Statement</a></li>
-          <li><a href="#">Terms &amp; Conditions</a></li>
+          <li><a href="#!">Privacy &amp; Security</a></li>
+          <li><a href="#!">Statement</a></li>
+          <li><a href="#!">Terms &amp; Conditions</a></li>
         </ul>
       </div>
       <div>
         <div class="text-primary">Follow Us</div>
         <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+          <li><a href="#!"></a></li>
+          <li><a href="#!"></a></li>
+          <li><a href="#!"></a></li>
+          <li><a href="#!"></a></li>
         </ul>
         <div>
           <div>Email Updates</div>
