--- a/index.html
+++ b/index.html
@@ -174,14 +174,17 @@
       </div>
     </section>
 
-    <!-- PS DEMO -->
-    <section class="demo align-center">
-      <div>This site is created for demonstrative purposes only and does not offer any real products or services.
+    <!-- DEMO -->
+    <div class="demo">
+      <p>
+        This site is created for demonstrative purposes only and does not offer any real products or services.
+      </p>
+      <div>
+        <div class="center copyright">
+          <p>&copy; <a href="#!">Shyamsundar Gadde</a> 2023</p>
+          <p>Design: <a href="#!">Pluralsight</a></p>
+        </div>
       </div>
-      </div>
-    </section>
-
-    <!-- <div class="text-primary copyright">&copy;Pluralsight 2018</div> -->
   </footer>
 </body>
 
