--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div>
         <div class="center copyright">
           <p>&copy; <a href="#!">Shyamsundar Gadde</a> 2023</p>
-          <p>Design: <a href="#!">Pluralsight</a></p>
+          <p>Design: <a href="https://app.pluralsight.com/">Pluralsight</a></p>
         </div>
       </div>
   </footer>
